Made some wording improvements

--- a/src/main/asciidoc/WebFX.adoc
+++ b/src/main/asciidoc/WebFX.adoc
@@ -77,7 +77,7 @@ NOTE: Note for the impatient: OpenJFX is a huge library (about 10MB) compared to
 
 ==== No server
 
-There are already great solutions to run Swing or JavaFX applications in the browser without plugins by actually running them on a server. And these solutions don't have the limitations WebFX has on the API. However, a traditional self-contained web app packaging is a much more simple, scalable and reliable execution model. This is precisely the reason why you would prefer WebFX.
+There are already great solutions to run Swing or JavaFX applications in the browser without plugins by actually running them on a server. And these solutions don't have the limitations WebFX has on the API. However, a standard self-contained JS packaging is a much more simple, scalable and reliable execution model. This is precisely this benefit that can make the difference, and probably the main reason why you would prefer WebFX over other existing solutions.
 
 ==== Performance
 
@@ -113,9 +113,9 @@ Despite the big size of OpenJFX, WebFX can produce lightweight web apps, as demo
 
 The secret? Here are the 3 main ingredients that make the magic:
 
-* The scene graph -> DOM mapper is much thinner than the original OpenJFX lower layer which has to reimplement many features a browser already has
-* GWT runs a dead code elimination, which removes the JavaFX classes you don't use
-* GWT produces an amazingly compaq and optimized JS code
+* The scene graph -> DOM mapper is much thinner than the original OpenJFX lower layer which has to reimplement many features a browser already has.
+* GWT runs a dead code elimination, which removes the JavaFX classes not used by the WebFX application.
+* GWT produces an amazingly compaq and optimized JS code.
 
 The later point also confers an excellent execution speed to your web app.
 
@@ -135,15 +135,15 @@ In addition to the web platform, WebFX will help you to compile your application
 
 ==== Java full-stack
 
-WebFX should please Java developers who are looking for a Java full-stack solution. Writing your whole stack in Java is a big advantage, keeping your development homogenous and simple, in your preferred Java IDE. Not only you don't need to master other complex ecosystems such as JavaScript or TypeScript, but you can also share the common code between your backend and frontends with the Java module system, a great advantage compared to heterogeneous systems.
+WebFX should please Java developers who are looking for a Java full-stack solution. Writing your whole stack in Java is a big advantage, keeping your environment simple and homogenous from your preferred Java IDE. Not only you don't need to master other complex ecosystems such as JavaScript or TypeScript, but you can also share the common code between your backend and frontends with the Java module system, a great advantage compared to heterogeneous systems.
 
 ==== Low learning curve
 
-WebFX is not yet another UI toolkit to learn, but nothing else than an already well known and well documented API: JavaFX. All the features you love like JavaFX bindings available for your web app. You will just feel at home with WebFX!
+WebFX is not yet another UI toolkit to learn, but nothing else than the already well known and documented JavaFX API. All the powerful features you love like JavaFX bindings available for your web app. You will just feel at home with WebFX!
 
 ==== Fast development cycles
 
-You don't need to run regular GWT compilations like you would do with a traditional GWT development, because you can run and debug your WebFX application directly in your Java IDE instead with the OpenJFX runtime (like a standard JavaFX development). You typically transpile your app only at the end of a development cycle, once you have finished developing a feature in this traditional manner, and want to check the web version.
+You don't need to run regular GWT compilations like you would do with a traditional GWT development, because you can run and debug your WebFX application directly in your Java IDE first with the OpenJFX runtime. You typically transpile your app only at the end of a development cycle to check the web version, after you have finished developing a feature using the standard JavaFX development model.
 
 ==== Free and open source
 
@@ -205,15 +205,15 @@ super sources, bundles, etc..."
 }
 ----
 
-Your inputs will be centralized in the WebFX module files named webfx.xml (same location as pom.xml), and the WebFX CLI will generate the rest of the build chain from these webfx.xml files. For example, a typical directive in webfx.xml will be:
+Your inputs will be centralized in the WebFX module files named webfx.xml (same location as pom.xml), and the WebFX CLI will generate the rest of the build chain from them. For example, a typical directive in webfx.xml will be:
 
     <dependencies>
         <used-by-source-modules/>
     </dependencies>
 
-This directive is asking the WebFX CLI to generate the list of your dependencies from an analysis of your source code, and automatically populate the dependencies in pom.xml.
+This directive is asking the WebFX CLI to identify the list of your dependencies from an analysis of your source code, and automatically populate the dependencies in pom.xml, module-info.java, module.gwt.xml, etc...
 
-In that process, the WebFX CLI takes care of the cross-platform aspects: when a feature is platform-dependent (a different implementation exists for different platforms), the tool will pick up the right modules (those whose implementation matches the target platform). This is at this point for example that it will replace the OpenJFX modules with the WebFX kit ones when targeting the web.
+During that process, the WebFX CLI takes care of the cross-platform aspects: when a feature is platform-dependent (a different implementation exists for different platforms), it will pick up the right modules (those whose implementation matches the target platform). This is at this point for example that it will replace the OpenJFX modules with the WebFX kit ones when targeting the web.
 
 === Installing the WebFX CLI
 
