--- a/src/main/asciidoc/WebFX.adoc
+++ b/src/main/asciidoc/WebFX.adoc
@@ -60,7 +60,7 @@ app -[hidden]> gwt
 gwt -[hidden]> wa
 ----
 
-The link:https://github.com/webfx-project/webfx/tree/main/webfx-kit[webfx-kit^] module is the heart of WebFX. It's a modified version of OpenJFX that can be transpiled. This is achieved by patching the higher layer of OpenJFX (which contains the main JavaFX features and API) to make it GWT compatible, and by replacing the lower layer (the graphic rendering pipeline) by a scene graph -> DOM mapper (the DOM being finally rendered by the browser).
+The link:https://github.com/webfx-project/webfx/tree/main/webfx-kit[WebFX kit^] is the heart of WebFX. It's a modified version of OpenJFX that can be transpiled. This is achieved by patching the higher layer of OpenJFX (which contains the main JavaFX features and API) to make it GWT compatible, and by replacing the lower layer (the graphic rendering pipeline) by a scene graph -> DOM mapper (the DOM being finally rendered by the browser).
 
 === Limitations
 
@@ -143,7 +143,7 @@ WebFX is not yet another UI toolkit to learn, but nothing else than the already 
 
 ==== Fast development cycles
 
-You don't need to run regular GWT compilations like you would do with a traditional GWT development, because you can run and debug your WebFX application directly in your Java IDE first with the OpenJFX runtime. You typically transpile your app only at the end of a development cycle to check the web version, after you have finished developing a feature using the standard JavaFX development model.
+You don't need to run regular GWT compilations like you would do with a traditional GWT development, because you can already run and debug your WebFX application directly in your Java IDE with the OpenJFX runtime. You typically transpile your app only at the end of a development cycle to check the web version, after you have finished developing a feature using the standard JavaFX development model.
 
 ==== Free and open source
 
@@ -187,7 +187,7 @@ end legend
 <3> This module targets the web platform. It binds your application with the WebFX kit, and can call GWT to produce the web app.
 <4> This module targets the standard desktop platform. It binds your application with the OpenJFX runtime, and is directly executable in your IDE. It can also call the standard JavaFX toolchain to produce the desktop executables (Windows, macOS or Linux) with an embed JVM.
 
-You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build files as follows (when applicable to the module):
+You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build chain as follows (when applicable to the module):
 
 [.text-center]
 [graphviz, wbfx-cli, format=svg]
@@ -219,7 +219,7 @@ During that process, the CLI takes care of the cross-platform aspects: when a fe
 
 Since we haven't published any release at this stage yet, the way to install the CLI for now is to clone the https://github.com/webfx-project/webfx-cli[webfx-cli] repository, and build it with Maven.
 
-NOTE: We will distribute the CLI in a better way on the first WebFX official release.
+NOTE: We will distribute the CLI in a better way with the first WebFX official release.
 
 ==== Cloning the webfx-cli repository
 
@@ -322,7 +322,9 @@ Let's create our first WebFX application. We need to create the repository direc
  cd webfx-example
  webfx init org.example:webfx-example:1.0.0-SNAPSHOT
 
-TIP: `webfx init org.example:1.0.0-SNAPSHOT` will also work as the tool takes the repository directory name as the artifactId when omitted in the command.
+TIP: `webfx init org.example:1.0.0-SNAPSHOT` will also work as the CLI takes the repository directory name as the artifactId when omitted in the command.
+
+The init command just creates 2 files (webfx.xml and pom.xml) at the root level of your repository. If this is the first time you use it, it will also download some webfx.xml files from the Maven repository to get the meta info about the essential WebFX modules, before completing the job.
 
 ==== Creating your application modules
 
@@ -360,15 +362,27 @@ You can run the GWT version of your application with the following command:
 
 === Developing in your IDE
 
-We will give the instructions for IntelliJ IDEA, but you can easily transpose them to other Java IDEs.
+NOTE: The screenshots will be taken from IntelliJ IDEA, but you can easily transpose them to other Java IDEs.
 
 ==== Opening the project
 
+You can simply open the webfx-example directory from your Java IDE. It will recognize it as a Maven project, and import it.
+
 ==== Configuring the OpenJFX application
 
-A few explanation before going further: GWT has a different entry point than standard Java applications, but WebFX hides the hassle with a single cross-platform entry point that will correctly bootstrap your application. So the main class of a WebFX application will always be `dev.webfx.platform.shared.services.boot.ApplicationBooter` whatever the platform. It will find your JavaFX application because it has been automatically declared as a Java service by the CLI.
+Here is how to create the configuration:
 
-NOTE: GWT normally doesn't support the Java service API, but WebFX does, because the CLI emulates it by generating a GWT super source. You can rely on this feature to declare and implement your own services. Your services can even have platform-dependent implementations. This can be a cross-platform UI API, with an OpenJFX implementation, and then a GWT implementation using an alternative JS library for your web app.
+[.text-center]
+image::idea-config-webfx-example.png[]
+<1> select the OpenJFX application module
+<2> enter [red]`dev.webfx.platform.shared.services.boot.ApplicationBooter` for the main class
+
+TIP: You can just type `AB` and your IDE should quickly find and suggest the WebFX ApplicationBooter class.
+
+Explanation: GWT has a different entry point than standard Java applications, but WebFX hides the hassle with a single cross-platform entry point that will correctly bootstrap your application. So the main class of a WebFX application will always be `dev.webfx.platform.shared.services.boot.ApplicationBooter` whatever the platform. It will find your JavaFX application because it has been automatically declared as a Java service by the CLI.
+
+NOTE: GWT normally doesn't support the Java service API, but WebFX does, because the CLI emulates it by generating a GWT super source. You can rely on this feature to declare and implement your own services. Your services can even have platform-dependent implementations. A service can be a cross-platform UI API for example, with an OpenJFX implementation, and then a GWT implementation using an alternative JS library for your web app.
+
 
 ==== Building and running the GWT application
 
